syntax = "proto3";
package messages;
option csharp_namespace = "Messages";

message RequestTarget {
    string TargetActorName=1;
}
message HelloRequest {}
message HelloResponse {
    string Message=1;
}
